--- a/desarrollo/SGC/4. Programacion/Escritorio/package.json
+++ b/desarrollo/SGC/4. Programacion/Escritorio/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-electron": "ng build --prod --aot --base-href . && copy src\\electron\\* dist",
+    "build-electron": "ng build --base-href . && copy src\\electron\\* dist",
     "electron": "npm run build-electron && electron dist"
   },
   "private": true,
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bulma": "^0.6.0",
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.1.0",
