--- a/desarrollo/SGC/4. Programacion/Web/Backend/package.json
+++ b/desarrollo/SGC/4. Programacion/Web/Backend/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.141.0",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
@@ -15,6 +16,7 @@
     "jade": "~1.11.0",
     "knex": "^0.13.0",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "pg": "^7.3.0",
     "serve-favicon": "~2.4.5",
     "tv4": "^1.3.0",
